--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -66,6 +66,7 @@ text-decoration: none;
 }
 }
 /* footer */
+
 footer {
 margin-top: 45px;
 padding-top: 5px;
@@ -89,7 +90,23 @@ margin-left: 15px;
 }
 }
 }
-
+@media (max-width: 800px){
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+      }
+      ul {
+        float: none;
+        padding: 0;
+        li {
+        float: none;
+        margin-left: 0;
+      }
+    }
+  }
+}
 /* miscellaneous */
 .debug_dump {
 clear: both;
